# DIYPie-hardware

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  arm-none-eabi-gcc.cmake  main.c  pal.h
doc/: i2c_addr.ods
platform/: pal.c  port.c  startup_samd20.c
platform/debug/: ozone.jdebug
platform/include/: platform.h
platform/res/: ozone.jdebug  ozone_atmel.jdebug  samd20g16b_flash.ld
platform/src/: startup_samd20.c
